--- a/KCETPreviousYearPapers/app/src/main/AndroidManifest.xml
+++ b/KCETPreviousYearPapers/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -17,9 +18,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KCETPreviousYearPapers"
         android:localeConfig="@xml/locales_config"
-        tools:ignore="UnusedAttribute"
-        tools:targetApi="31">
-<provider
+        tools:targetApi="33">
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/baseline_notifications_24" />
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
             android:exported="false"
